Bug 118327 - break point is not displayed if set manually
Summary: break point is not displayed if set manually
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: CPP Debugger (other bugs)
Version First Reported In: 3.3.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 4.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-12-14 18:32 UTC by leon pollak
Modified: 2009-07-25 09:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description leon pollak 2005-12-14 18:32:12 UTC
Version:           3.3 (using KDE KDE 3.4.2)
Installed from:    Fedora RPMs
OS:                Linux

Suppose I set BP in the command line in some function which is not opened. Then the red point designating the BP is not displayed when the control comes to the BP position.
Rather unpleasant thing, because to removeb it you need a lot of efforts...:-))
Comment 1 Vladimir Prus 2006-01-24 14:00:23 UTC
In fact, there are two different issues.
1. Breakpoints added via gdb command line does not work.
2. Adding of file:line breakpoints via breakpoints widget is broken, since the command sent to gdb includes ./ before file name, and gdb does not like relative paths like that.

Speaking of (1) -- why do you add breakpoints via command line?
Comment 2 leon pollak 2006-01-24 14:07:48 UTC
Two reasons:
1. Sometimes, it is simpler then to go and search the place where the BP must be in the text - I already remember the place.
2. If I do not mistake, BP added in the command file (like .gdbinit) are also not supported. And this is significantly useful feature - there are some points in the program, reaching of which is critical - I need to know this.

I understand the problem very well, but again, it is strange, how DDD knows that I added BP in .gdbinit? The command line is simply parsed, but file...?

Thanks.
Comment 3 Vladimir Prus 2006-01-24 15:20:15 UTC
Well, DDD must be issuing the "info breakpoints" command. KDevelop also issues that command (sometimes), but for some reason does not add the new breakpoint anywhere.

Comment 4 SED 2006-05-23 00:46:52 UTC
The broken breakpoint widget, mentioned by Vladimir above, is still broken in Kdevelop 3.3.2. Kdevelop tries to set breakpoints for files with relative pathnames, but gdb only wants the filename, not the whole path. I have all my sources in ./src below the main project directory, and thus I cannot set any breakpoints. Will this be fixed anytime soon? It worked fine in version 3.2.
Comment 5 Vladimir Prus 2006-05-23 10:53:26 UTC
SED, do you get the problem when manually adding breakpoint in breakpoints widget? Or when clicking in the editor?
Comment 6 Thomas McGuire 2007-04-11 21:02:37 UTC
I just ran into this problem as well, with another aspect:

When the breakpoint is hit, it can not be disabled.
To reproduce.
0. Delete all breakpoints
1. Add one breakpoint somewhere so that GDB will stop, let's say main.cpp:42
2. Run the debugger. It will hit the BP in line 42.
3. Use the GDB command window to manually add a breakpoint somewhere later, for example main.cpp:46. You the -break-insert command for this, which can mostly be copied&pasted from the GDB command history (except line number of course).
4. The breakpoint is added, but the editor does not display it. BUG.
5. Continue execution. The breakpoint in line 46 is hit now. When this happens, the breakpoint is now displayed in the editor.
6. Try to disable the breakpoint by clicking on its icon in the editor. GDB will remove the breakpoint, but the editor still displays it. BUG.
Comment 7 Andreas Pakulat 2009-07-24 20:12:17 UTC
The problem of not seeing breakpoints that the user types into the GDB command window is still there in current trunk. Everything else described here is however not reproduceable (including what Thomas explained in comment #5, step 6).
Comment 8 leon pollak 2009-07-24 23:34:31 UTC
Strange - I reproduce this each time I try with my last updated 3.x.x. version.
Comment 9 Niko Sams 2009-07-25 09:21:10 UTC
SVN commit 1002145 by nsams:

Reload breakpoints after any user command.

BUG: 118327

 M  +2 -2      debugsession.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1002145
Comment 10 Niko Sams 2009-07-25 09:23:40 UTC
leon: andreas was testing against trunk aka KDevelop4