Reload breakpoints after any user command.

BUG: 118327